; ModuleID = '/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-engine.c_rpc_mode.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-engine.c_rpc_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gather_data = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"RPC\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gather_data*)* @rpc_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rpc_mode(%struct.gather_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.gather_data*, align 8
  store %struct.gather_data* %0, %struct.gather_data** %3, align 8
  %4 = load %struct.gather_data*, %struct.gather_data** %3, align 8
  %5 = getelementptr inbounds %struct.gather_data, %struct.gather_data* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @strcmp(i32 %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %11

10:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %11

11:                                               ; preds = %10, %9
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i64 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
